# hospital-price-transparency

./: .gitignore  1043292899.jsonl  1396739165.jsonl  1609860659.jsonl  1639151301.jsonl  1700036696.jsonl  1700870672.jsonl  1891921516.jsonl  1942294814.jsonl  Makefile  README.md  docker-compose.yaml  pyproject.toml  scrape.py  status.csv
.github/workflows/: ci.yml  scrape.yml  test.yml
data/: 1043292899.jsonl  1083778633.jsonl  1104874684.jsonl  1174951271.jsonl  1235614983.jsonl  1255428736.jsonl  1396739165.jsonl  1417432139.jsonl  1427075027.jsonl  1609860659.jsonl  1639151301.jsonl  1649277732.jsonl  1659321198.jsonl  1700036696.jsonl  1700870672.jsonl  1891921516.jsonl  1942294814.jsonl  1962987677.jsonl
data/AK/: 020001.jsonl  020006.jsonl  020008.jsonl  020012.jsonl  021301.jsonl  021302.jsonl  021304.jsonl  021306.jsonl  021308.jsonl  021311.jsonl  021313.jsonl  022001.jsonl
data/AL/: 010001.jsonl  010005.jsonl  010006.jsonl  010007.jsonl  010008.jsonl  010011.jsonl  010016.jsonl  010018.jsonl  010019.jsonl  010021.jsonl  010022.jsonl  010023.jsonl  010029.jsonl  010033.jsonl  010035.jsonl  010036.jsonl  010039.jsonl  010040.jsonl  010045.jsonl  010046.jsonl  010049.jsonl  010055.jsonl  010056.jsonl  010058.jsonl  010061.jsonl  010062.jsonl  010065.jsonl  010073.jsonl  010078.jsonl  010083.jsonl  010085.jsonl  010086.jsonl  010089.jsonl  010090.jsonl  010091.jsonl  010092.jsonl  010095.jsonl  010097.jsonl  010099.jsonl  010100.jsonl  (+34 more)
data/AR/: 040001.jsonl  040002.jsonl  040007.jsonl  040010.jsonl  040011.jsonl  040014.jsonl  040016.jsonl  040017.jsonl  040019.jsonl  040020.jsonl  040022.jsonl  040026.jsonl  040027.jsonl  040036.jsonl  040041.jsonl  040047.jsonl  040051.jsonl  040055.jsonl  040062.jsonl  040067.jsonl  040069.jsonl  040071.jsonl  040072.jsonl  040076.jsonl  040078.jsonl  040084.jsonl  040088.jsonl  040118.jsonl  040119.jsonl  040132.jsonl  040137.jsonl  040152.jsonl  040156.jsonl  040161.jsonl  041300.jsonl  041302.jsonl  041303.jsonl  041305.jsonl  041306.jsonl  041307.jsonl  (+16 more)
data/AZ/: 030002.jsonl  030006.jsonl  030007.jsonl  030010.jsonl  030011.jsonl  030013.jsonl  030016.jsonl  030023.jsonl  030024.jsonl  030030.jsonl  030036.jsonl  030038.jsonl  030043.jsonl  030055.jsonl  (+41 more)
dim/: README.md  cbsa.csv  hospital.csv
scripts/: __init__.py  fix_broken_urls.py  generate_summary.py  scrape.py  sync_directory.py  validate_urls.py
src/: __init__.py  config.py  models.py
status/: AK.csv  AL.csv  AR.csv  AZ.csv  CA.csv  CO.csv  CT.csv  DE.csv  FL.csv  GA.csv  HI.csv  IA.csv  ID.csv  IL.csv  IN.csv  KS.csv  KY.csv  LA.csv  MA.csv  MD.csv  ME.csv  MI.csv  MN.csv  MO.csv  MS.csv  MT.csv  NC.csv  ND.csv  NE.csv  NH.csv  NJ.csv  NM.csv  NV.csv  NY.csv  OH.csv  OK.csv  OR.csv  PA.csv  RI.csv  SC.csv  (+12 more)
tests/: __init__.py  test_models.py  test_normalizers.py  test_scrapers.py
(+3350 files in other folders)
